fix spacing

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -96,7 +96,7 @@ header {
   @include grid-container;
   background: transparent;
   padding-top: 192px;
-  padding-bottom: 64px;
+  padding-bottom: 16px;
   border: none;
   text-align: center;
 
